# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./auth";
 export * from "./experiences";
+export * from "./tailored-cvs";
